--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "eslint",
-    "postinstall": "prisma generate"
+    "postinstall": "echo 'Postinstall complete'"
   },
   "dependencies": {
     "@prisma/client": "^6.18.0",
