--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@prisma/nextjs-monorepo-workaround-plugin": "^6.18.0",
     "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
